Added in the performance improvements (#2383)