@@ -2,6 +2,7 @@ package uk.gov.hmcts.reform.em.hrs.job;
 
 import com.azure.storage.blob.BlobClient;
 import com.azure.storage.blob.BlobContainerClient;
+import com.microsoft.applicationinsights.core.dependencies.google.common.collect.Lists;
 import net.javacrumbs.shedlock.spring.annotation.SchedulerLock;
 import org.apache.commons.lang3.time.StopWatch;
 import org.apache.poi.ss.usermodel.Cell;
@@ -12,8 +13,8 @@ import org.slf4j.Logger;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.jdbc.core.namedparam.BeanPropertySqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
-import org.springframework.jdbc.core.namedparam.SqlParameterSourceUtils;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 import uk.gov.hmcts.reform.em.hrs.exception.BlobCopyException;
@@ -30,7 +31,8 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.concurrent.CompletableFuture;
+import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
@@ -47,6 +49,9 @@ public class UpdateJurisdictionCodesTask {
 
     @Value("${scheduling.task.jurisdiction-codes.batch-size}")
     private int batchSize;
+
+    @Value("${scheduling.task.jurisdiction-codes.thread-limit}")
+    private int defaultThreadLimit;
 
     private final CcdDataStoreApiClient ccdDataStoreApiClient;
     private final HearingRecordingService hearingRecordingService;
@@ -65,19 +70,23 @@ public class UpdateJurisdictionCodesTask {
     @Scheduled(cron = "${scheduling.task.jurisdiction-codes.cron}", zone = "Europe/London")
     @SchedulerLock(name = TASK_NAME)
     public void run() {
+
         logger.info("Started {} job", TASK_NAME);
+
         StopWatch stopWatch = new StopWatch();
         stopWatch.start();
+
         Optional<BlobClient> csvBlobClient = loadWorkbookBlobClient();
         if (csvBlobClient.isEmpty()) {
             throw new BlobNotFoundException("blobName", "jurisdictionWorkbook");
         }
 
-        try (ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
+        try (ExecutorService executorService = Executors.newFixedThreadPool(defaultThreadLimit);
              XSSFWorkbook workbook = loadWorkbook(csvBlobClient.get())) {
 
             XSSFSheet sheet = workbook.getSheetAt(0);
-            List<CompletableFuture<UpdateRecordingRecord>> futures = new ArrayList<>();
+
+            List<UpdateRecordingRecord> unProcessedRecords = new ArrayList<>();
 
             for (Row row : sheet) {
                 UpdateRecordingRecord updateRecordingRecord = new UpdateRecordingRecord(
@@ -85,59 +94,68 @@ public class UpdateJurisdictionCodesTask {
                     getStringCellValue(row.getCell(1)),
                     getStringCellValue(row.getCell(2))
                 );
-
-                futures.add(CompletableFuture.supplyAsync(() ->
-                    updateCase(updateRecordingRecord) ? updateRecordingRecord : null, executorService));
-
+                unProcessedRecords.add(updateRecordingRecord);
             }
-            List<UpdateRecordingRecord> completedRecords = futures.stream()
-                .map(CompletableFuture::join)
-                .filter(Objects::nonNull)
-                .toList();
+            logger.info("Number of rows in unProcessedRecords: {}", unProcessedRecords.size());
 
-            batchUpdate(completedRecords);
+            List<List<UpdateRecordingRecord>> batches = Lists.partition(unProcessedRecords, batchSize);
+            logger.info("Number of batches created: {}", batches.size()); //300 batches
 
+            Set<Long> ccdCaseIds = ConcurrentHashMap.newKeySet();
+            for (List<UpdateRecordingRecord> batch : batches) {
+                executorService.submit(() -> processBatch(batch, ccdCaseIds));
+            }
         } catch (IOException e) {
             logger.info("Encountered error updating jurisdiction codes: {}", e.getMessage());
         }
+
         csvBlobClient.get().delete();
         stopWatch.stop();
+
         logger.info("Update job for jurisdiction codes took {} ms", stopWatch.getDuration().toMillis());
         logger.info("Finished {} job", TASK_NAME);
     }
 
-    private boolean updateCase(UpdateRecordingRecord recordingRecord) {
-        String filename = recordingRecord.filename;
-        Long ccdCaseId = hearingRecordingService.findCcdCaseIdByFilename(filename);
-        if (Objects.isNull(ccdCaseId)) {
-            logger.info("Failed to find ccd case id for filename: {}", filename);
-            return false;
+    private void processBatch(List<UpdateRecordingRecord> batch, Set<Long> ccdCaseIds) {
+        for (UpdateRecordingRecord recordingRecord : batch) {
+            Long ccdCaseId = hearingRecordingService.findCcdCaseIdByFilename(recordingRecord.filename);
+            if (Objects.nonNull(ccdCaseId) && ccdCaseIds.add(ccdCaseId)) {
+                updateCaseAndHrsMetaData(recordingRecord, ccdCaseId);
+            }
         }
+    }
+
+    private void updateCaseAndHrsMetaData(UpdateRecordingRecord recordingRecord, Long ccdCaseId) {
+
+        String filename = recordingRecord.filename;
         try {
             ccdDataStoreApiClient.updateCaseWithCodes(
                 ccdCaseId, recordingRecord.jurisdictionCode, recordingRecord.serviceCode);
+            logger.info("CCD updated for ccd case id: {}", ccdCaseId);
+            updateHrsMetaData(recordingRecord);
+            logger.info("HRS DB updated for ccd case id: {}", ccdCaseId);
         } catch (Exception e) {
             logger.info("Failed to update case with jurisdiction and service codes for filename: {}",
                          filename, e);
-            return false;
+        } finally {
+            logger.info("End updateCaseAndHrsMetaData for {}", recordingRecord.filename);
         }
-        return true;
     }
 
     private String getStringCellValue(Cell cell) {
         return Objects.isNull(cell) || cell.getStringCellValue().isBlank() ? null : cell.getStringCellValue();
     }
 
-    private void batchUpdate(List<UpdateRecordingRecord> records) {
-        for (int i = 0; i < records.size(); i += batchSize) {
-            List<UpdateRecordingRecord> batchList = records.subList(i, Math.min(i + batchSize, records.size()));
-            namedParameterJdbcTemplate.batchUpdate(
-                "UPDATE hearing_recording "
-                    + "SET jurisdiction_code = :jurisdictionCode, service_code = :serviceCode "
-                    + "WHERE id = (SELECT hearing_recording_id "
-                    + "FROM hearing_recording_segment "
-                    + "WHERE filename = :filename)", SqlParameterSourceUtils.createBatch(batchList));
-        }
+    private void updateHrsMetaData(UpdateRecordingRecord updateRecordingRecord) {
+        // This maps the object's properties to the named parameters in the SQL
+        BeanPropertySqlParameterSource params = new BeanPropertySqlParameterSource(updateRecordingRecord);
+        namedParameterJdbcTemplate.update(
+            "UPDATE hearing_recording "
+                + "SET jurisdiction_code = :jurisdictionCode, service_code = :serviceCode "
+                + "WHERE id = (SELECT hearing_recording_id "
+                + "FROM hearing_recording_segment "
+                + "WHERE filename = :filename)", params);
+
     }
 
     private Optional<BlobClient> loadWorkbookBlobClient() {
